app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";
#logo {
	height: 120%;
  	margin-top: -8px;
  	margin-left: -72px;
}

#publication-logo {
	  height: 20px;
  	margin-top: 0px;
  	margin-bottom: 4px;
  	margin-left: 0px;
  	margin-right: 6px;
}

body {
	padding-top: 0px;
}


.navbar-brand-centered,
.navbar-nav li a {
	position: absolute;
    left: 50%;
    text-align: center;
    line-height: 120px;
    height: 120px;
}

.nav-pills,
.navbar-nav li a {
	margin-top: 60px;
}

.navbar-fixed-bottom
{
  width: 100%;
}

.footer
{
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 20px;
  background-color: #d0cfcd;
  text-align: center;
  margin-left: -52px;
}

.article-show
{
padding-bottom: 10px;
}

